fixed align issue on contact img

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -65,6 +65,8 @@ body {
 
 }
 
+
+
 .card-body {
     margin-top: 20px;
     padding: 10px;
@@ -79,9 +81,9 @@ h5 {
 }
 
 img {
-    width: 50%;
-    height: 50%;
-    border-radius: 80px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
 }
 
@@ -243,8 +245,7 @@ img {
 
     /* section */
     .cardImageText {
-        margin-top: 20px;
-        margin-left: 15%;
+        margin:20px auto;
         padding-left: 20px;
         width: 200px;
         height: 200px;
@@ -272,9 +273,9 @@ img {
     }
 
     img {
-        width: 50%;
-        height: 50%;
-        border-radius: 80px;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
         box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
     }
 
